deploy/k8s/overlays/thirdparty-x-domain/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanko
  namespace: hanko-tenant
  labels:
    fqdn: hanko.mattuu.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanko-elements
  namespace: hanko-tenant
  labels:
    fqdn: elements-hanko.mattuu.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanko-quickstart
  namespace: hanko-tenant
  labels:
    fqdn: quickstart-hanko.mattuu.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  namespace: hanko-tenant
  labels:
    fqdn: mail-hanko.mattuu.com
